third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/spec/string-4-0.stderr
TOML parse error at line 2, column 46
  |
2 | str5 = """Here are three quotation marks: """."""  # INVALID
  |                                              ^
expected newline, `#`
